fix: heights and overflow

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ header{
     border-bottom: 2px solid #EDEDED;
     display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+.headerContainer{
+    width: 97%;
 }
 
 nav{
@@ -65,13 +70,8 @@ main{
 }
 
 .container{
-    width: 98%;
+    width: 90%;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
 }
 
 .titleSection{
@@ -90,11 +90,17 @@ main{
 .paintingsList, .figuresList{
     display: flex;
     width: 100%;
+    height: 100%;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 25px;
+    overflow-x: auto;
+}
+
+.listDiv{
+    height: 300px;
 }
 
 .listCard{
@@ -108,11 +114,10 @@ main{
     background-color: #F8F8F8;
     border: 2px transparent;
     border-radius: 15px;
-    overflow-x: auto;
 }
 
 .cardImageDiv{
-    width: 100%;
+    width: 207px;
     height: 160px;
     display: flex;
     justify-content: center;
@@ -128,15 +133,35 @@ main{
 }
 
 .cardTitle{
+    height: 23px;
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     color: #1B1B1B;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .cardPrice{
+    height: 23px;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     color: #868383;
+}
+
+.paintingsList::-webkit-scrollbar, .figuresList::-webkit-scrollbar, body::-webkit-scrollbar{
+    width: 12px;
+    height: 10px;
+}
+  
+.paintingsList::-webkit-scrollbar-track, .figuresList::-webkit-scrollbar-track, body::-webkit-scrollbar-track{
+    background:black
+}
+  
+.paintingsList::-webkit-scrollbar-thumb, .figuresList::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb{
+    background-color: white;
+    border-radius: 20px;
+    border: 3px solid black
 }
